Fix SDK loading order - load before Monaco AMD loader

--- a/code_interview/index.html
+++ b/code_interview/index.html
@@ -98,11 +98,11 @@ Explanation: nums[0] + nums[1] = 2 + 7 = 9</pre>
         </details>
     </div>
 
+    <!-- Kaltura Avatar SDK (load before Monaco to avoid AMD loader conflicts) -->
+    <script src="../kaltura-avatar-sdk.js?v=1.0.0"></script>
+
     <!-- Monaco Editor from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
-
-    <!-- Kaltura Avatar SDK -->
-    <script src="../kaltura-avatar-sdk.js?v=1.0.0"></script>
 
     <!-- Main Application -->
     <script src="code-interview.js?v=1.0.0"></script>
